// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.panelmatch.protocol;

import "google/type/date.proto";
import "wfa/measurement/api/v2alpha/exchange_step.proto";
import "wfa/measurement/api/v2alpha/exchange_step_attempt.proto";

option java_package = "org.wfanet.panelmatch.protocol";
option java_multiple_files = true;

message NamedSignature {
  bytes signature = 1;
  // The API resource name of the certificate that provided this signature
  string certificate_name = 2;
}

message ExchangeStepKey {
  wfa.measurement.api.v2alpha.ExchangeStep exchange_step = 1;
}

message ClaimedExchangeStep {
  string recurring_exchange_id = 1;
  google.type.Date date = 2;
  wfa.measurement.api.v2alpha.ExchangeStep step = 3;
  string step_attempt_key = 4;
}

// The state of an exchange step
message ExchangeStepStatus {
  string key = 1;
  wfa.measurement.api.v2alpha.ExchangeStepAttempt.State state = 2;
  repeated string logs = 3;
}
